make sure mbrola binaries are made executable also if there is a space in the path leading there...
git-svn-id: https://mary.opendfki.de/repos/trunk@2244 953a6561-930b-0410-b2a6-db37d1b2ae63